feat: 固定ダメージとシールドリチャージを実装